--- a/index.html
+++ b/index.html
@@ -48,11 +48,12 @@
         <div class="relative w-[1080px] mx-auto flex items-center justify-between">
 
             <!-- logo -->
-             <a href="/" class="cursor-pointer  bg-white">
-                <img src="./images/razorpay.webp" 
-                width="50px"
-                >
-             </a>
+           <a href="/" class="cursor-pointer py-7 pr-7">
+              <img
+              src="./images/logo.svg"
+              width="125px"
+              height="30px"/>
+          </a>
 
              <ul class="flex gap-x-6">
                 <li class="text-white font-mulish py-7 hover:text-blue-400 cursor-pointer transition-all duration-200 relative group">
@@ -91,12 +92,12 @@
 
 
        <div class="flex space-x-6">
-              <img
-                  src="./images/indianflag1.webp"
+               <img
+                  src="./images/india-flag.svg"
                   width="28px"
                   height="20px"
                   class="hidden lg:block"
-                  />
+                  /> 
               <button class="py-3 px-5 font-mullish text-white border-lightBlue border
               rounded-sm text-sm  font-bold">Log in</button>
 
